--- a/estilo.css
+++ b/estilo.css
@@ -2,28 +2,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Salsa&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap');
 
-body{
+body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    color: #333;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-.tudo{
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
+    height: 100vh;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
     margin-top: 0;
     margin: 10px;
 }
 
-.containerBtns{
+.containerBtns {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,7 +29,7 @@ body{
     margin-top: 45px;
 }
 
-h1{
+h1 {
     font-family: 'Bungee Inline', sans-serif;
     margin-top: 5px;
     margin-bottom: 15px;
@@ -40,7 +38,7 @@ h1{
     font-size: 50px;
 }
 
-input[type=number]{
+input[type=number] {
     text-align: center;
     padding: 10px;
     border: solid 2px #BFBFBF;
@@ -48,12 +46,12 @@ input[type=number]{
     font-size: 20px;
 }
 
-input[type=number]:focus{
+input[type=number]:focus {
     outline: none;
     border: solid 3px #2b5764;
 }
 
-.x{
+.x {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,13 +64,13 @@ input[type=number]:focus{
     font-size: 25px;
 }
 
-input[type=number], .x{
+input[type=number], .x {
     box-sizing: border-box;
     height: 80px;
     width: 200px;
 }
 
-.calcular, #reset{
+.calcular, #reset {
     font-family: 'Bungee Inline', sans-serif;
     width: 140px;
     height: 70px;
@@ -84,42 +82,43 @@ input[type=number], .x{
     cursor: pointer;
 }
 
-.calcular{
+.calcular {
     background-color: #28A745;
     border: solid 2px #19712e;
 }
 
-.calcular:hover{
+.calcular:hover {
     background-color: #19712e;
 }
 
-#reset{
-    padding-bottom: 65px;
+#reset {
+    padding-bottom: 15px;
     background-color: #a72828;
     border: solid 2px #641717;
 }
 
-#reset:hover{
+#reset:hover {
     background-color: #641717;
 }
 
-#resetContainer{
+#resetContainer {
     position: relative;
 }
 
-#resetText{
+#resetText {
+    font-family: 'Salsa', cursive;
     position: absolute;
-    bottom: 18px;
+    bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     font-size: 17px;
     color: #fff;
     width: 93px;
-    font-family: 'Salsa', cursive;
     cursor: pointer;
 }
 
-#assComo{
+#assimComo {
+    font-family: 'Teko', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -127,10 +126,9 @@ input[type=number], .x{
     margin: 30px;
     font-size: 35px;
     letter-spacing: 1px;
-    font-family: 'Teko', sans-serif;
 }
 
-.estPara{
+.estaPara {
     font-family: 'Teko', sans-serif;
     background-color: #BFBFBF;
     padding: 5px;
@@ -139,89 +137,88 @@ input[type=number], .x{
     font-size: 21px;
 }
 
-input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button{
+input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
 @media(max-width: 700px) {
-    h1{
+    h1 {
         font-size: 40px;
     }
 
-    input[type=number], .x{
+    input[type=number], .x {
         height: 60px;
         width: 150px;
     }
 
-    .estPara{
+    .estaPara {
         padding: 2px;
         padding-left: 25px;
         padding-right: 25px;
         font-size: 24px;
     }
 
-    #assComo{
+    #assimComo {
         margin: 25px;
     }
 
-    .calcular, #reset{
-        font-family: 'Baloo Paaji 2', sans-serif;
+    .calcular, #reset {
         width: 110px;
         height: 55px;
         font-size: 18px;
     }
 
-    #reset{
+    #reset {
         padding-bottom: 0;
     }
 
-    #resetText{
+    #resetText {
         display: none;
     }
 }
 
 @media(max-width: 550px) {
-    h1{
+    h1 {
         font-size: 38px;
     }
 }
 
 @media(max-width: 520px) {
-    h1{
+    h1 {
         font-size: 35px;
     }
 }
 
 @media(max-width: 465px) {
-    h1{
+    h1 {
         font-size: 32px;
     }
 }
 
 @media(max-width: 440px) {
-    h1{
+    h1 {
         line-height: 30px;
     }
 
-    input[type=number], .x{
+    input[type=number], .x {
         height: 45px;
         width: 112.5px;
     }
 
-    .estPara{
+    .estaPara {
         padding: 1px;
         padding-left: 20px;
         padding-right: 20px;
         font-size: 18px;
     }
 
-    #assComo{
+    #assimComo {
         margin: 20px;
         font-size: 30px;
     }
 
-    .calcular, #reset{
+    .calcular, #reset {
         width: 95px;
         height: 47.5px;
         font-size: 17px;
@@ -229,24 +226,23 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 @media(max-width: 370px) {
-    h1{
+    h1 {
         margin-top: 15px;
         line-height: 30px;
     }
 }
 
 @media(max-width: 355px) {
-    h1{
-        margin-top: 15px;
+    h1 {
         line-height: 35px;
     }
 
-    input[type=number], .x{
+    input[type=number], .x {
         height: 60px;
         width: 112.5px;
     }
 
-    .estPara{
+    .estaPara {
         padding-left: 20px;
         padding-right: 20px;
         font-size: 18px;
@@ -254,7 +250,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 @media(max-width: 335px) {
-    .estPara{
+    .estaPara {
         padding-left: 10px;
         padding-right: 10px;
         font-size: 18px;
@@ -262,7 +258,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 @media(max-width: 315px) {
-    .estPara{
+    .estaPara {
         color: #BFBFBF;
         font-size: 0;
         padding: 20px;
